--- a/react_js_base_code-main G7/src/views/containers/Login/Login.css
+++ b/react_js_base_code-main G7/src/views/containers/Login/Login.css
@@ -10,12 +10,14 @@ body {
     height: 100vh;
 }
 
-.wrapper {
+.login-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
+    height: 100vh;
+    width: 100vh;
     background-color: lab(59.66% 8.64 -36.67);
 }
 
@@ -58,19 +60,19 @@ h1 {
     align-self: center;
 }
 
-.input-container {
+.login-input-container {
     position: relative;
     margin-bottom: 20px;
     width: 250px;
     align-self: center;
 }
 
-.input-container label {
+.login-input-container label {
     display: block;
     position: relative;
 }
 
-.input-container span {
+.login-input-container span {
     position: absolute;
     top: -4px; /* Position the placeholder text above the input */
     left: 10px;
@@ -82,7 +84,7 @@ h1 {
     pointer-events: none; /* Prevents interaction with the placeholder */
 }
 
-.input-container input {
+.login-input-container input {
     width: 100%;
     padding: px;
     border: 1px solid #333;
@@ -115,11 +117,11 @@ h1 {
     font-size: 1.2em;
 }
 
-.sign-up p {
+.login-sign-up p {
     margin-bottom: 0;
 }
 
-.sign-up button {
+.login-sign-up button {
     font-style: italic;
     background: none;
     border: none;
