--- a/react_js_base_code-main G7/src/views/containers/Login/Login.css
+++ b/react_js_base_code-main G7/src/views/containers/Login/Login.css
@@ -5,9 +5,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: #f5f5f5;
+    height: 100vh;
+    width: 100vw;
+    background-color: lab(59.66% 8.64 -36.67);
     font-family: 'Arial', sans-serif;
+
 }
 
 .login-container {
