--- a/react_js_base_code-main G7/src/views/containers/Register/Register.css
+++ b/react_js_base_code-main G7/src/views/containers/Register/Register.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Arial', sans-serif;
     font-weight: 100;
     font-style: normal;
     display: flex;
