home, header, sidebar, fixed css

--- a/react_js_base_code-main G7/src/views/containers/ForgotPassword/ForgotPassword.css
+++ b/react_js_base_code-main G7/src/views/containers/ForgotPassword/ForgotPassword.css
@@ -1,13 +1,5 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lab(59.66% 8.64 -36.67);
-    margin: 0;
-    height: 100vh;
-}
-
 .forgot-wrapper {
+    background-color: #56697F;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +21,7 @@ body {
 
 h2 {
     margin: 0 0 40px 0; /* Top-left alignment with spacing below */
-    color: #4b0082; /* Matches the purple theme */
+    color: #593F62; /* Matches the purple theme */
     font-size: 1.5em;
 }
 
@@ -76,7 +68,7 @@ h2 {
 button[type="submit"] {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #4b0082; /* Matches the purple theme */
+    background-color: #593F62; /* Matches the purple theme */
     color: white;
     border: none;
     border-radius: 5px;
