--- a/react_js_base_code-main G7/src/views/containers/Register/Register.css
+++ b/react_js_base_code-main G7/src/views/containers/Register/Register.css
@@ -2,21 +2,17 @@ body {
     font-family: "Poppins", sans-serif;
     font-weight: 100;
     font-style: normal;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lab(59.66% 8.64 -36.67);
     margin: 0;
-    height: 100vh;
 }
 
 .register-wrapper {
+    
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: lab(59.66% 8.64 -36.67);
+    background-color: #56697F;
 }
 
 .register-container {
@@ -57,7 +53,7 @@ body {
 
 .register-box-right h1 {
     text-align: left;
-    color: #4b0082; /* Matches the purple theme */
+    color: #593F62; /* Matches the purple theme */
     margin-top: 0;
     font-size: 2rem;
     padding-bottom: 25%;
@@ -109,7 +105,7 @@ body {
     align-self: center; /* Centers the button */
     margin-top: 30px; /* Adds space between the inputs and the button */
     padding: 10px 30px;
-    background-color: #4b0082;
+    background-color: #593F62;
     color: white;
     border: none;
     cursor: pointer;
@@ -122,14 +118,14 @@ body {
     bottom: 20px; /* Distance from the bottom of the box */
     left: 20px; /* Distance from the left of the box */
     font-size: 0.9em;
-    color: #4b0082;
+    color: black;
 }
 
 .register-sign-in button {
     font-style: italic;
     background: none;
     border: none;
-    color: #4b0082;
+    color: #593F62;
     cursor: pointer;
     font-size: 0.9em;
     padding: 0;
