--- a/react_js_base_code-main G7/src/views/containers/Main/Main.css
+++ b/react_js_base_code-main G7/src/views/containers/Main/Main.css
@@ -1,3 +1,7 @@
 body{
     background-color: #eef7f8;
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
