--- a/react_js_base_code-main G7/src/views/containers/Admin/Main/Main.css
+++ b/react_js_base_code-main G7/src/views/containers/Admin/Main/Main.css
@@ -1,3 +1,14 @@
 body{
     background-color: #eef7f8;
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+/* Main.css */
+.nav-link {
+  color: white;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 16px;
 }
