--- a/react_js_base_code-main G7/src/views/containers/Main/Main.css
+++ b/react_js_base_code-main G7/src/views/containers/Main/Main.css
@@ -5,3 +5,10 @@ body{
     font-weight: 100;
     font-style: normal;
 }
+/* Main.css */
+.nav-link {
+  color: white;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 16px;
+}
