--- a/react_js_base_code-main G7/src/views/containers/Admin/AMain/AMain.css
+++ b/react_js_base_code-main G7/src/views/containers/Admin/AMain/AMain.css
@@ -4,6 +4,8 @@ body{
     font-family: 'Arial', sans-serif;
     font-weight: 100;
     font-style: normal;
+    position: relative;
+    
 }
 /* Main.css */
 .nav-link {
