--- a/react_js_base_code-main G7/src/views/containers/Register/Register.css
+++ b/react_js_base_code-main G7/src/views/containers/Register/Register.css
@@ -5,7 +5,7 @@
     height: 100vh;
     width: 100vw;
     background-color: #56697f;
-    font-family: Inter, Arial, sans-serif;
+    font-family:  Arial, sans-serif;
 }
 
 .register-wrapper {
