--- a/react_js_base_code-main G7/src/views/containers/Homepage/Homepage.css
+++ b/react_js_base_code-main G7/src/views/containers/Homepage/Homepage.css
@@ -1,12 +1,22 @@
+html, body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 .homepage-container {
     position: relative;
-    width: 100%;
-    height: calc(100vh - 64px);
+    width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
     flex-direction: column;
+    justify-content: center;   /* Center vertically */
+    align-items: center;       /* Center horizontally */
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .homepage-backgroundImage {
