--- a/react_js_base_code-main G7/src/views/containers/Login/Login.css
+++ b/react_js_base_code-main G7/src/views/containers/Login/Login.css
@@ -78,9 +78,9 @@
 .login-forgotPassword {
     margin: 5px 0 0 0;
     font-size: 14px;
-    text-align: right;
+    text-align: center;
     width: 100%;
-    max-width: 300px;
+    max-width: none;
 }
 
 .login-link {
