--- a/react_js_base_code-main G7/src/views/containers/Faq/Faq.css
+++ b/react_js_base_code-main G7/src/views/containers/Faq/Faq.css
@@ -3,6 +3,12 @@
     font-family: Arial, sans-serif;
     max-width: 1200px;
     margin: 0 auto;
+    height: calc(100vh - 64px);
+    overflow: scroll;
+}
+
+.faq-container::-webkit-scrollbar {
+  display: none;
 }
 
 .faq-title {
